Compositing two scenes with different output scales crashes blender #61104

Closed
opened 2019-02-01 17:56:38 +01:00 by rdnmnm · 5 comments

System Information
Operating system: Windows 7
Graphics card: GTX 480

Blender Version
Broken: 2.80 (sub 43), branch: blender2.7, commit date: 2019-02-01 01:46, hash: 552b2287db

Short description of error
When two different scenes with different percentage scales are composited together, blender crashes.

Exact steps for others to reproduce the error

  1. Open blender
  2. Create new scene (through full copy)(Referred to as Scene B)
  3. Go back to the first scene (Scene A)
  4. Go to the compositor and enable nodes
  5. Duplicate Render Layers node, change linked scene to Scene B
  6. Change Scene A render scale percentage in the output tab
  7. Hit F12
**System Information** Operating system: Windows 7 Graphics card: GTX 480 **Blender Version** Broken: 2.80 (sub 43), branch: blender2.7, commit date: 2019-02-01 01:46, hash: 552b2287db86 **Short description of error** When two different scenes with different percentage scales are composited together, blender crashes. **Exact steps for others to reproduce the error** 1. Open blender 2. Create new scene (through full copy)(Referred to as Scene B) 3. Go back to the first scene (Scene A) 4. Go to the compositor and enable nodes 5. Duplicate Render Layers node, change linked scene to Scene B 6. Change Scene A render scale percentage in the output tab 7. Hit F12
Author

Added subscriber: @rdnmnm

Added subscriber: @rdnmnm

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-02-01 18:19:09 +01:00

Backtrace:

Thread 52 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffc9ffb700 (LWP 18255)]
0x00007ffff3078ff4 in __memcpy_ssse3 () from /lib64/libc.so.6
(gdb) bt
- 0  0x00007ffff3078ff4 in __memcpy_ssse3 () from /lib64/libc.so.6
- 1  0x00007fffe2bfae5d in _mesa_readpixels () from /usr/lib64/dri/radeonsi_dri.so
- 2  0x00007fffe2ceaf0c in st_ReadPixels () from /usr/lib64/dri/radeonsi_dri.so
- 3  0x00007fffe2bfb747 in _mesa_ReadnPixelsARB () from /usr/lib64/dri/radeonsi_dri.so
- 4  0x00007fffe2bfbb32 in _mesa_ReadPixels () from /usr/lib64/dri/radeonsi_dri.so
- 5  0x0000555557d60bd2 in GPU_framebuffer_read_color (fb=0x7fffccb6aca8, x=0, y=0, w=1920, h=1080, channels=4, slot=0, data=0x7fffc7c00008)
    at /home/zed/programmering/blender_master/blender/source/blender/gpu/intern/gpu_framebuffer.c:616
#6  0x0000555557df7ed2 in eevee_render_result_combined (rl=0x7fffcfa3dcc8, viewname=0x7fffcc843378 "", rect=0x7fffc9ffa510, vedata=0x7fffcc84a308,
    UNUSED_sldata=0x7fffcca4d608) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/eevee/eevee_render.c:207
#7  0x0000555557df9784 in EEVEE_render_draw (vedata=0x7fffcc84a308, engine=0x7fffcca4d308, rl=0x7fffcfa3dcc8, rect=0x7fffc9ffa510)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/eevee/eevee_render.c:596
#8  0x0000555557ddfec0 in eevee_render_to_image (vedata=0x7fffcc84a308, engine=0x7fffcca4d308, render_layer=0x7fffcfa3dcc8, rect=0x7fffc9ffa510)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/eevee/eevee_engine.c:420
#9  0x0000555557db0842 in DRW_render_to_image (engine=0x7fffcca4d308, depsgraph=0x7fffcc83e508)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1877
#10 0x00005555577e082e in RE_engine_render (re=0x7fffcc842008, do_all=0)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/external_engine.c:735
#11 0x00005555577e876f in do_render_3d (re=0x7fffcc842008)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1080
- 12 0x00005555577e8a83 in do_render (re=0x7fffcc842008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1156
- 13 0x00005555577e8c3e in render_scene (re=0x7fffcd696008, sce=0x7fffcf9f0008, cfra=1)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1201
#14 0x00005555577e8e55 in ntree_render_scenes (re=0x7fffcd696008)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1250
#15 0x00005555577e93c9 in do_render_composite (re=0x7fffcd696008)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1399
#16 0x00005555577e9f98 in do_render_all_options (re=0x7fffcd696008)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1629
#17 0x00005555577eaf1d in RE_BlenderFrame (re=0x7fffcd696008, bmain=0x7fffcfc48408, scene=0x7fffe53e5008, single_layer=0x0, camera_override=0x0, frame=1,
    write_still=false) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1983
#18 0x00005555576e17b7 in render_startjob (rjv=0x7fffcd39ce88, stop=0x7fffcd751d3c, do_update=0x7fffcd751d3a, progress=0x7fffcd751d40)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/render/render_internal.c:614
#19 0x00005555570ff396 in do_job_thread (job_v=0x7fffcd751cc8)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_jobs.c:330
#20 0x00005555585440f4 in tslot_thread_start (tslot_p=0x7fffcc029448)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/threads.c:251
- 21 0x00007ffff639d3c3 in start_thread () from /lib64/libpthread.so.0
- 22 0x00007ffff30343ef in clone () from /lib64/libc.so.6

@fclem feel free to reassign if this is not for you.

Backtrace: ``` Thread 52 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffc9ffb700 (LWP 18255)] 0x00007ffff3078ff4 in __memcpy_ssse3 () from /lib64/libc.so.6 (gdb) bt - 0 0x00007ffff3078ff4 in __memcpy_ssse3 () from /lib64/libc.so.6 - 1 0x00007fffe2bfae5d in _mesa_readpixels () from /usr/lib64/dri/radeonsi_dri.so - 2 0x00007fffe2ceaf0c in st_ReadPixels () from /usr/lib64/dri/radeonsi_dri.so - 3 0x00007fffe2bfb747 in _mesa_ReadnPixelsARB () from /usr/lib64/dri/radeonsi_dri.so - 4 0x00007fffe2bfbb32 in _mesa_ReadPixels () from /usr/lib64/dri/radeonsi_dri.so - 5 0x0000555557d60bd2 in GPU_framebuffer_read_color (fb=0x7fffccb6aca8, x=0, y=0, w=1920, h=1080, channels=4, slot=0, data=0x7fffc7c00008) at /home/zed/programmering/blender_master/blender/source/blender/gpu/intern/gpu_framebuffer.c:616 #6 0x0000555557df7ed2 in eevee_render_result_combined (rl=0x7fffcfa3dcc8, viewname=0x7fffcc843378 "", rect=0x7fffc9ffa510, vedata=0x7fffcc84a308, UNUSED_sldata=0x7fffcca4d608) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/eevee/eevee_render.c:207 #7 0x0000555557df9784 in EEVEE_render_draw (vedata=0x7fffcc84a308, engine=0x7fffcca4d308, rl=0x7fffcfa3dcc8, rect=0x7fffc9ffa510) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/eevee/eevee_render.c:596 #8 0x0000555557ddfec0 in eevee_render_to_image (vedata=0x7fffcc84a308, engine=0x7fffcca4d308, render_layer=0x7fffcfa3dcc8, rect=0x7fffc9ffa510) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/eevee/eevee_engine.c:420 #9 0x0000555557db0842 in DRW_render_to_image (engine=0x7fffcca4d308, depsgraph=0x7fffcc83e508) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1877 #10 0x00005555577e082e in RE_engine_render (re=0x7fffcc842008, do_all=0) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/external_engine.c:735 #11 0x00005555577e876f in do_render_3d (re=0x7fffcc842008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1080 - 12 0x00005555577e8a83 in do_render (re=0x7fffcc842008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1156 - 13 0x00005555577e8c3e in render_scene (re=0x7fffcd696008, sce=0x7fffcf9f0008, cfra=1) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1201 #14 0x00005555577e8e55 in ntree_render_scenes (re=0x7fffcd696008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1250 #15 0x00005555577e93c9 in do_render_composite (re=0x7fffcd696008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1399 #16 0x00005555577e9f98 in do_render_all_options (re=0x7fffcd696008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1629 #17 0x00005555577eaf1d in RE_BlenderFrame (re=0x7fffcd696008, bmain=0x7fffcfc48408, scene=0x7fffe53e5008, single_layer=0x0, camera_override=0x0, frame=1, write_still=false) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1983 #18 0x00005555576e17b7 in render_startjob (rjv=0x7fffcd39ce88, stop=0x7fffcd751d3c, do_update=0x7fffcd751d3a, progress=0x7fffcd751d40) at /home/zed/programmering/blender_master/blender/source/blender/editors/render/render_internal.c:614 #19 0x00005555570ff396 in do_job_thread (job_v=0x7fffcd751cc8) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_jobs.c:330 #20 0x00005555585440f4 in tslot_thread_start (tslot_p=0x7fffcc029448) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/threads.c:251 - 21 0x00007ffff639d3c3 in start_thread () from /lib64/libpthread.so.0 - 22 0x00007ffff30343ef in clone () from /lib64/libc.so.6 ``` @fclem feel free to reassign if this is not for you.

This issue was referenced by ce09b93955

This issue was referenced by ce09b93955de6dd80f46af33f4329392b0752f74

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61104
No description provided.